feat: support specifying the docker image to pass to testcontainers
Sometimes it is necessary to override the docker image, for example, if developing on Apple Silicon / M1 and the official images only include amd64 support.

With this change, it is possible to pass a `docker_image` to `jooqflyway` and that will be passed through to testcontainers.

--- a/rules_jooq_flyway_codegen/BUILD
+++ b/rules_jooq_flyway_codegen/BUILD
@@ -23,6 +23,7 @@ java_library(
         "@rules_jooq_flyway_codegen_maven//:org_testcontainers_mariadb",
         "@rules_jooq_flyway_codegen_maven//:org_testcontainers_mysql",
         "@rules_jooq_flyway_codegen_maven//:org_testcontainers_postgresql",
+        "@rules_jooq_flyway_codegen_maven//:org_testcontainers_testcontainers",
         "@rules_jooq_flyway_codegen_maven//:org_xerial_sqlite_jdbc",
     ],
 )
